# releez

./: CHANGELOG.md  README.md  cliff.toml  mise.toml  pyproject.toml
.github/workflows/: ci-checks.yml  lint-pr-title.yml  validate-release.yaml
src/releez/: artifact_version.py  cli.py  cliff.py  errors.py  git_repo.py  github.py  process.py  release.py  settings.py  version_tags.py
tests/unit/cli/: test_cli_release_notes.py  test_cli_release_start.py  test_cli_release_tag.py  test_cli_version_artifact.py
tests/unit/core/: test_artifact_version.py  test_cliff.py  test_github.py  test_release_start_format.py  test_settings.py  test_version_tags.py
